First round of changes to config.

--- a/vernemq.config
+++ b/vernemq.config
@@ -45,7 +45,7 @@ allow_unsubscribe_during_netsplit = off
 ## 
 ## Acceptable values:
 ##   - on or off
-allow_multiple_sessions = off
+allow_multiple_sessions = on
 
 ## Set the time in seconds VerneMQ waits before a retry, in case a (QoS=1 or QoS=2) message
 ## delivery gets no answer.
@@ -212,7 +212,7 @@ listener.vmq.clustering = 0.0.0.0:44053
 ## 
 ## Acceptable values:
 ##   - an IP/port pair, e.g. 127.0.0.1:10011
-listener.http.default = 127.0.0.1:8888
+listener.https.default = 127.0.0.1:8888
 
 ## Set the mountpoint on the protocol level or on the listener level
 ## - listener.tcp.mountpoint
@@ -239,12 +239,14 @@ listener.mountpoint = off
 ## or on the listener level:
 ## - listener.ssl.my_ssl_listener.cafile
 ## - listener.wss.my_wss_listener.cafile
+
 ## 
 ## Default: 
 ## 
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.cafile = /etc/vernemq/cacerts.pem
+listener.ssl.cafile = /run/secrets/ca
 
 ## 
 ## Default: 
@@ -252,6 +254,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.cafile = /etc/vernemq/cacerts.pem
+listener.https.cafile = /run/secrets/ca
 
 ## Set the path to the PEM encoded server certificate
 ## on the protocol level or on the listener level:
@@ -266,6 +269,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.certfile = /etc/vernemq/cert.pem
+listener.ssl.certfile = /run/secrets/cert
 
 ## 
 ## Default: 
@@ -273,6 +277,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.certfile = /etc/vernemq/cert.pem
+listener.https.certfile = /run/secrets/cert
 
 ## Set the path to the PEM encoded key file on the protocol
 ## level or on the listener level:
@@ -287,6 +292,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.keyfile = /etc/vernemq/key.pem
+listener.ssl.keyfile = /run/secrets/key
 
 ## 
 ## Default: 
@@ -301,6 +307,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.keyfile = /etc/vernemq/key.pem
+listener.https.keyfile = /run/secrets/key
 
 ## Set the list of allowed ciphers (each separated with a colon),
 ## on the protocol level or on the listener level. Reasonable defaults
@@ -383,7 +390,7 @@ listener.mountpoint = off
 ## 
 ## Acceptable values:
 ##   - text
-## listener.ssl.tls_version = tlsv1.2
+listener.ssl.tls_version = tlsv1.2
 
 ## 
 ## Default: tlsv1.2
@@ -397,7 +404,7 @@ listener.mountpoint = off
 ## 
 ## Acceptable values:
 ##   - text
-## listener.https.tls_version = tlsv1.2
+listener.https.tls_version = tlsv1.2
 
 ## If 'listener.ssl.require_certificate' is enabled, you may enable
 ## 'listener.ssl.use_identity_as_username' to use the CN value from the client
@@ -567,7 +574,10 @@ plugins.vmq_bridge = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-vmq_acl.acl_file = /etc/vernemq/vmq.acl
+# TODO: I'd like this to be referenced as it would allow me to control general 
+# system references, but I'd also like to control dynamically created HALs.
+# I kinda think I'll just create migrations that'll add to this file.
+vmq_acl.acl_file = /data/vmq.acl
 
 ## set the acl reload interval in seconds, the value 0 disables
 ## the automatic reloading of the acl file.
@@ -584,7 +594,7 @@ vmq_acl.acl_reload_interval = 10
 ## 
 ## Acceptable values:
 ##   - the path to a file
-vmq_passwd.password_file = /etc/vernemq/vmq.passwd
+vmq_passwd.password_file = /data/vmq.passwd
 
 ## set the password reload interval in seconds, the value 0
 ## disables the automatic reloading of the password file.
@@ -984,7 +994,7 @@ vmq_diversity.auth_redis.enabled = off
 ## 
 ## Acceptable values:
 ##   - one of: off, file, console, both
-log.console = file
+log.console = console
 
 ## The severity level of the console log, default is 'info'.
 ## 
@@ -1034,6 +1044,7 @@ log.crash = on
 ## 
 ## Acceptable values:
 ##   - the path to a file
+# TODO: it might make sense to put this file in the /data folder.
 log.crash.file = /var/log/vernemq/crash.log
 
 ## Maximum size in bytes of individual messages in the crash log
@@ -1078,7 +1089,7 @@ log.crash.rotation.keep = 5
 ## 
 ## Acceptable values:
 ##   - text
-nodename = VerneMQ@127.0.0.1
+nodename = VerneMQ@SciFiFarms
 
 ## Cookie for distributed node communication.  All nodes in the
 ## same cluster should use the same cookie or they will not be able to
@@ -1089,7 +1100,7 @@ nodename = VerneMQ@127.0.0.1
 ## 
 ## Acceptable values:
 ##   - text
-distributed_cookie = vmq
+distributed_cookie = vmq_scififarms
 
 ## Sets the number of threads in async thread pool, valid range
 ## is 0-1024. If thread support is available, the default is 64.
