--- a/vernemq.conf
+++ b/vernemq.conf
@@ -188,6 +188,7 @@ listener.nr_of_acceptors = 10
 ## Acceptable values:
 ##   - an IP/port pair, e.g. 127.0.0.1:10011
 listener.tcp.default = 127.0.0.1:1883
+listener.ssl.default = 127.0.0.1:8883
 
 ## listener.vmq.clustering is the IP address and TCP port that
 ## the broker will bind to accept connections from other cluster
@@ -212,7 +213,7 @@ listener.vmq.clustering = 0.0.0.0:44053
 ## 
 ## Acceptable values:
 ##   - an IP/port pair, e.g. 127.0.0.1:10011
-listener.https.default = 127.0.0.1:8888
+#listener.https.default = 127.0.0.1:8888
 
 ## Set the mountpoint on the protocol level or on the listener level
 ## - listener.tcp.mountpoint
@@ -577,7 +578,7 @@ plugins.vmq_bridge = off
 # TODO: I'd like this to be referenced as it would allow me to control general 
 # system references, but I'd also like to control dynamically created HALs.
 # I kinda think I'll just create migrations that'll add to this file.
-vmq_acl.acl_file = /data/vmq.acl
+vmq_acl.acl_file = /etc/vernemq/vmq.acl
 
 ## set the acl reload interval in seconds, the value 0 disables
 ## the automatic reloading of the acl file.
@@ -594,7 +595,7 @@ vmq_acl.acl_reload_interval = 10
 ## 
 ## Acceptable values:
 ##   - the path to a file
-vmq_passwd.password_file = /data/vmq.passwd
+vmq_passwd.password_file = /etc/vernemq/vmq.passwd
 
 ## set the password reload interval in seconds, the value 0
 ## disables the automatic reloading of the password file.
