Fix config settings for listening IP and ssl file names.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -187,8 +187,8 @@ listener.nr_of_acceptors = 10
 ## 
 ## Acceptable values:
 ##   - an IP/port pair, e.g. 127.0.0.1:10011
-listener.tcp.default = 127.0.0.1:1883
-listener.ssl.default = 127.0.0.1:8883
+listener.tcp.default = 0.0.0.0:1883
+listener.ssl.default = 0.0.0.0:8883
 
 ## listener.vmq.clustering is the IP address and TCP port that
 ## the broker will bind to accept connections from other cluster
@@ -247,7 +247,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.cafile = /etc/vernemq/cacerts.pem
-listener.ssl.cafile = /run/secrets/ca
+listener.ssl.cafile = /run/secrets/ca.pem
 
 ## 
 ## Default: 
@@ -255,7 +255,7 @@ listener.ssl.cafile = /run/secrets/ca
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.cafile = /etc/vernemq/cacerts.pem
-listener.https.cafile = /run/secrets/ca
+listener.https.cafile = /run/secrets/ca.pem
 
 ## Set the path to the PEM encoded server certificate
 ## on the protocol level or on the listener level:
@@ -270,7 +270,7 @@ listener.https.cafile = /run/secrets/ca
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.certfile = /etc/vernemq/cert.pem
-listener.ssl.certfile = /run/secrets/cert
+listener.ssl.certfile = /run/secrets/mqtt_cert
 
 ## 
 ## Default: 
@@ -278,7 +278,7 @@ listener.ssl.certfile = /run/secrets/cert
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.certfile = /etc/vernemq/cert.pem
-listener.https.certfile = /run/secrets/cert
+listener.https.certfile = /run/secrets/mqtt_cert
 
 ## Set the path to the PEM encoded key file on the protocol
 ## level or on the listener level:
@@ -293,7 +293,7 @@ listener.https.certfile = /run/secrets/cert
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.keyfile = /etc/vernemq/key.pem
-listener.ssl.keyfile = /run/secrets/key
+listener.ssl.keyfile = /run/secrets/mqtt_key
 
 ## 
 ## Default: 
@@ -308,7 +308,7 @@ listener.ssl.keyfile = /run/secrets/key
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.keyfile = /etc/vernemq/key.pem
-listener.https.keyfile = /run/secrets/key
+listener.https.keyfile = /run/secrets/mqtt_key
 
 ## Set the list of allowed ciphers (each separated with a colon),
 ## on the protocol level or on the listener level. Reasonable defaults
