--- a/vernemq.conf
+++ b/vernemq.conf
@@ -247,7 +247,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.cafile = /etc/vernemq/cacerts.pem
-listener.ssl.cafile = /run/secrets/ca.pem
+listener.ssl.cafile = /run/secrets/ca
 
 ## 
 ## Default: 
@@ -255,7 +255,7 @@ listener.ssl.cafile = /run/secrets/ca.pem
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.cafile = /etc/vernemq/cacerts.pem
-listener.https.cafile = /run/secrets/ca.pem
+listener.https.cafile = /run/secrets/ca
 
 ## Set the path to the PEM encoded server certificate
 ## on the protocol level or on the listener level:
@@ -1003,7 +1003,7 @@ log.console = console
 ## 
 ## Acceptable values:
 ##   - one of: debug, info, warning, error
-log.console.level = info
+log.console.level = debug
 
 ## When 'log.console' is set to 'file' or 'both', the file where
 ## console messages will be logged.
