Change log level back to info.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -1003,7 +1003,7 @@ log.console = console
 ## 
 ## Acceptable values:
 ##   - one of: debug, info, warning, error
-log.console.level = debug
+log.console.level = info
 
 ## When 'log.console' is set to 'file' or 'both', the file where
 ## console messages will be logged.
