--- a/vernemq.conf
+++ b/vernemq.conf
@@ -578,7 +578,7 @@ plugins.vmq_bridge = off
 # TODO: I'd like this to be referenced as it would allow me to control general 
 # system references, but I'd also like to control dynamically created HALs.
 # I kinda think I'll just create migrations that'll add to this file.
-vmq_acl.acl_file = /etc/vernemq/vmq.acl
+vmq_acl.acl_file = /vernemq/etc/vmq.acl
 
 ## set the acl reload interval in seconds, the value 0 disables
 ## the automatic reloading of the acl file.
@@ -595,7 +595,7 @@ vmq_acl.acl_reload_interval = 10
 ## 
 ## Acceptable values:
 ##   - the path to a file
-vmq_passwd.password_file = /etc/vernemq/vmq.passwd
+vmq_passwd.password_file = /vernemq/etc/vmq.passwd
 
 ## set the password reload interval in seconds, the value 0
 ## disables the automatic reloading of the password file.
@@ -1012,7 +1012,7 @@ log.console.level = info
 ## 
 ## Acceptable values:
 ##   - the path to a file
-log.console.file = /var/log/vernemq/console.log
+log.console.file = /vernemq/etc/console.log
 
 ## The file where error messages will be logged.
 ## 
@@ -1020,7 +1020,7 @@ log.console.file = /var/log/vernemq/console.log
 ## 
 ## Acceptable values:
 ##   - the path to a file
-log.error.file = /var/log/vernemq/error.log
+log.error.file = /vernemq/etc/error.log
 
 ## When set to 'on', enables log output to syslog.
 ## 
