Update /vernemq/etc path for create-users.sh and vernemq.conf comments.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -246,7 +246,7 @@ listener.mountpoint = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.ssl.cafile = /etc/vernemq/cacerts.pem
+## listener.ssl.cafile = /vernemq/etc/cacerts.pem
 listener.ssl.cafile = /run/secrets/ca
 
 ## 
@@ -254,7 +254,7 @@ listener.ssl.cafile = /run/secrets/ca
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.https.cafile = /etc/vernemq/cacerts.pem
+## listener.https.cafile = /vernemq/etc/cacerts.pem
 listener.https.cafile = /run/secrets/ca
 
 ## Set the path to the PEM encoded server certificate
@@ -269,7 +269,7 @@ listener.https.cafile = /run/secrets/ca
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.ssl.certfile = /etc/vernemq/cert.pem
+## listener.ssl.certfile = /vernemq/etc/cert.pem
 listener.ssl.certfile = /run/secrets/mqtt_cert
 
 ## 
@@ -277,7 +277,7 @@ listener.ssl.certfile = /run/secrets/mqtt_cert
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.https.certfile = /etc/vernemq/cert.pem
+## listener.https.certfile = /vernemq/etc/cert.pem
 listener.https.certfile = /run/secrets/mqtt_cert
 
 ## Set the path to the PEM encoded key file on the protocol
@@ -292,7 +292,7 @@ listener.https.certfile = /run/secrets/mqtt_cert
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.ssl.keyfile = /etc/vernemq/key.pem
+## listener.ssl.keyfile = /vernemq/etc/key.pem
 listener.ssl.keyfile = /run/secrets/mqtt_key
 
 ## 
@@ -300,14 +300,14 @@ listener.ssl.keyfile = /run/secrets/mqtt_key
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.vmqs.keyfile = /etc/vernemq/key.pem
+## listener.vmqs.keyfile = /vernemq/etc/key.pem
 
 ## 
 ## Default: 
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## listener.https.keyfile = /etc/vernemq/key.pem
+## listener.https.keyfile = /vernemq/etc/key.pem
 listener.https.keyfile = /run/secrets/mqtt_key
 
 ## Set the list of allowed ciphers (each separated with a colon),
@@ -571,7 +571,7 @@ plugins.vmq_bridge = off
 
 ## Set the path to an access control list file.
 ## 
-## Default: /etc/vernemq/vmq.acl
+## Default: /vernemq/etc/vmq.acl
 ## 
 ## Acceptable values:
 ##   - the path to a file
@@ -591,7 +591,7 @@ vmq_acl.acl_reload_interval = 10
 
 ## Set the path to a password file.
 ## 
-## Default: /etc/vernemq/vmq.passwd
+## Default: /vernemq/etc/vmq.passwd
 ## 
 ## Acceptable values:
 ##   - the path to a file
@@ -915,7 +915,7 @@ vmq_diversity.auth_redis.enabled = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## vmq_bridge.ssl.sbr0.cafile = /etc/vernemq/cacerts.pem
+## vmq_bridge.ssl.sbr0.cafile = /vernemq/etc/cacerts.pem
 
 ## Define the path to a folder containing
 ## the PEM encoded CA certificates that are trusted.
@@ -924,7 +924,7 @@ vmq_diversity.auth_redis.enabled = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## vmq_bridge.ssl.sbr0.capath = /etc/vernemq/cacerts
+## vmq_bridge.ssl.sbr0.capath = /vernemq/etc/cacerts
 
 ## Set the path to the PEM encoded server certificate.
 ## 
@@ -932,7 +932,7 @@ vmq_diversity.auth_redis.enabled = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## vmq_bridge.ssl.sbr0.certfile = /etc/vernemq/cert.pem
+## vmq_bridge.ssl.sbr0.certfile = /vernemq/etc/cert.pem
 
 ## Set the path to the PEM encoded key file.
 ## 
@@ -940,7 +940,7 @@ vmq_diversity.auth_redis.enabled = off
 ## 
 ## Acceptable values:
 ##   - the path to a file
-## vmq_bridge.ssl.sbr0.keyfile = /etc/vernemq/key.pem
+## vmq_bridge.ssl.sbr0.keyfile = /vernemq/etc/key.pem
 
 ## When using certificate based TLS, the bridge will attempt to verify the
 ## hostname provided in the remote certificate matches the host/address being
