Standardize cert_bundle to enable create_secret in portainer/mqtt-scripts/renew-tls.sh

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -270,7 +270,7 @@ listener.https.cafile = /run/secrets/ca
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.certfile = /vernemq/etc/cert.pem
-listener.ssl.certfile = /run/secrets/mqtt_cert
+listener.ssl.certfile = /run/secrets/cert_bundle
 
 ## 
 ## Default: 
@@ -278,7 +278,7 @@ listener.ssl.certfile = /run/secrets/mqtt_cert
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.certfile = /vernemq/etc/cert.pem
-listener.https.certfile = /run/secrets/mqtt_cert
+listener.https.certfile = /run/secrets/cert_bundle
 
 ## Set the path to the PEM encoded key file on the protocol
 ## level or on the listener level:
@@ -293,7 +293,7 @@ listener.https.certfile = /run/secrets/mqtt_cert
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.keyfile = /vernemq/etc/key.pem
-listener.ssl.keyfile = /run/secrets/mqtt_key
+listener.ssl.keyfile = /run/secrets/key
 
 ## 
 ## Default: 
@@ -308,7 +308,7 @@ listener.ssl.keyfile = /run/secrets/mqtt_key
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.keyfile = /vernemq/etc/key.pem
-listener.https.keyfile = /run/secrets/mqtt_key
+listener.https.keyfile = /run/secrets/key
 
 ## Set the list of allowed ciphers (each separated with a colon),
 ## on the protocol level or on the listener level. Reasonable defaults
