Enable http endpoint to allow for metric scraping.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -205,7 +205,7 @@ listener.vmq.clustering = 0.0.0.0:44053
 
 ## listener.http.default is the IP address and TCP port that
 ## the broker will bind to accept HTTP connections
-## - listener.http.default = 0.0.0.0:8888
+listener.http.default = 0.0.0.0:8888
 ## This also works for SSL listeners:
 ## - listener.https.default= 0.0.0.0:8889
 ## 
