Clean up and add a couple missing elements.

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,6 @@
 #FROM [ORG/IMAGE:TAG]
+# 
+#RUN apk add --no-cache [ANY DESIRED PACKAGE]
 #
 ### Set up the CMD as well as the pre and post hooks.
 #COPY go-init /bin/go-init
@@ -6,5 +8,5 @@
 #COPY exitpoint.sh /usr/bin/exitpoint.sh
 #
 #ENTRYPOINT ["go-init"]
-#CMD ["-pre", "/usr/bin/entrypoint.sh", "-main", "[YOUR COMMAND HERE]", "-post", "/usr/bin/exitpoint.sh"]
+#CMD ["-main", "/usr/bin/entrypoint.sh", "-post", "/usr/bin/exitpoint.sh"]
 #
