Find and replace all EXAMPLE_SERVICE's with mqtt.

--- a/compose.yml
+++ b/compose.yml
@@ -1,52 +1,47 @@
 version: "3.5"
-# You should be able to find & replace all instances of EXAMPLE_SERVICE with 
-# your actual_service_name. Then you just need address any places that 
-# typically need changes (designated by comments)
 
 networks:
-  EXAMPLE_SERVICE:
-  EXAMPLE_SERVICE-private:
+  mqtt:
 
 volumes:
-  EXAMPLE_SERVICE:
-  EXAMPLE_SERVICE-db:
+  mqtt:
 
 #secrets:
   # Secrets format
   # ${service_name}_${mount_point}:
   #   name: ${STACK_NAME:-technocore}_${service_name}_${mount_point}
   # #   external: true
-  EXAMPLE_SERVICE_admin_username:
-    name: ${STACK_NAME:-technocore}_EXAMPLE_SERVICE_admin_username
+  #mqtt_admin_username:
+  #  name: ${STACK_NAME:-technocore}_mqtt_admin_username
+  #  external: true
+  mqtt_admin_password:
+    name: ${STACK_NAME:-technocore}_mqtt_admin_password
     external: true
-  EXAMPLE_SERVICE_admin_password:
-    name: ${STACK_NAME:-technocore}_EXAMPLE_SERVICE_admin_password
-    external: true
-  EXAMPLE_SERVICE_EXAMPLE_SERVICE-db_username:
-    name: ${STACK_NAME:-technocore}_EXAMPLE_SERVICE_EXAMPLE_SERVICE-db_username
-    external: true
-  EXAMPLE_SERVICE_EXAMPLE_SERVICE-db_password:
-    name: ${STACK_NAME:-technocore}_EXAMPLE_SERVICE_EXAMPLE_SERVICE-db_password
+  #mqtt_mqtt-db_username:
+  #  name: ${STACK_NAME:-technocore}_mqtt_mqtt-db_username
+  #  external: true
+  mqtt_mqtt-db_password:
+    name: ${STACK_NAME:-technocore}_mqtt_mqtt-db_password
     external: true
 
 services:
   ## Uncomment this if Traefik will be used for routing traffick to this service.
   #ingress:
   #  networks:
-  #    - EXAMPLE_SERVICE
+  #    - mqtt
 
-  EXAMPLE_SERVICE:
+  mqtt:
     deploy:
       labels:
       #  # These env vars should infact be uppercase
-      #  - traefik.frontend.rule=$EXAMPLE_SERVICE_ROUTING_LABEL
-      #  - traefik.frontend.priority=$EXAMPLE_SERVICE_ROUTING_LABEL_PRIORITY
+      #  - traefik.frontend.rule=$MQTT_ROUTING_LABEL
+      #  - traefik.frontend.priority=$MQTT_ROUTING_LABEL_PRIORITY
       #  - traefik.port=SET_ME_PLEASE
       #  - ${TRAEFIK_BASIC_AUTH}
       #  - traefik.enable=true
       #  # You'll need to set applicaiton's port here.
       #  - traefik.tags=ingress 
-      #  - traefik.docker.network=${STACK_NAME:-technocore}_EXAMPLE_SERVICE
+      #  - traefik.docker.network=${STACK_NAME:-technocore}_mqtt
       #  # Traefik service that listens to HTTP
       #  - traefik.redirectorservice.frontend.entryPoints=http
       #  - traefik.redirectorservice.frontend.redirect.entryPoint=https
@@ -68,26 +63,26 @@ services:
     #environment:
       # Sometimes you have to pass in ${DOMAIN} to enable the correct link paths to be generated.
       # Othertimes you can use http:// or https:// for the website. Weird trick.
-    image: ${image_provider:-scififarms}/technocore-EXAMPLE_SERVICE:${TAG:-latest}
+    image: ${image_provider:-scififarms}/technocore-mqtt:${TAG:-latest}
     logging:
       driver: "${LOGGING_DRIVER}"
       options:
         tag: "{{.Name}}"
     networks:
-      - EXAMPLE_SERVICE
-      - EXAMPLE_SERVICE-private
+      - mqtt
+      - mqtt-private
     #secrets:
-    #  - source: EXAMPLE_SERVICE_EXAMPLE_SERVICE_db_username
-    #    target: EXAMPLE_SERVICE_db_username
-    #  - source: EXAMPLE_SERVICE_EXAMPLE_SERVICE_db_password
-    #    target: EXAMPLE_SERVICE_db_password
-    #  - source: EXAMPLE_SERVICE_domain
+    #  - source: mqtt_mqtt_db_username
+    #    target: mqtt_db_username
+    #  - source: mqtt_mqtt_db_password
+    #    target: mqtt_db_password
+    #  - source: mqtt_domain
     #    target: domain
     volumes:
       # Likely need to change this
-      - EXAMPLE_SERVICE:/var/lib/EXAMPLE_SERVICE
+      - mqtt:/var/lib/mqtt
 
-  EXAMPLE_SERVICE_db:
+  mqtt_db:
     deploy:
       labels:
         - com.ouroboros.enable=true
@@ -95,22 +90,22 @@ services:
       restart_policy:
         condition: any
     #environment:
-    image: ${image_provider:-scififarms}/technocore-EXAMPLE_SERVICE-db:${TAG:-latest}
+    image: ${image_provider:-scififarms}/technocore-mqtt-db:${TAG:-latest}
     logging:
       driver: "${LOGGING_DRIVER}"
       options:
         tag: "{{.Name}}"
     networks:
-      - EXAMPLE_SERVICE-private
+      - mqtt-private
     secrets:
-      - source: EXAMPLE_SERVICE_db_admin_username
+      - source: mqtt_db_admin_username
         target: admin_username
-      - source: EXAMPLE_SERVICE_db_admin_password
+      - source: mqtt_db_admin_password
         target: admin_password
-      - source: EXAMPLE_SERVICE_db_EXAMPLE_SERVICE_username
-        target: EXAMPLE_SERVICE_username
-      - source: EXAMPLE_SERVICE_db_EXAMPLE_SERVICE_password
-        target: EXAMPLE_SERVICE_password
+      - source: mqtt_db_mqtt_username
+        target: mqtt_username
+      - source: mqtt_db_mqtt_password
+        target: mqtt_password
     volumes:
       # Likely need to change this
-      - EXAMPLE_SERVICE-db:/var/lib/EXAMPLE_SERVICE
+      - mqtt-db:/var/lib/mqtt
