Remove SSL config settings as the files could no longer be found.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -248,7 +248,7 @@ listener.mountpoint = off
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.cafile = /vernemq/etc/cacerts.pem
-listener.ssl.cafile = /run/secrets/ca
+#listener.ssl.cafile = /run/secrets/ca
 
 ## 
 ## Default: 
@@ -256,7 +256,7 @@ listener.ssl.cafile = /run/secrets/ca
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.cafile = /vernemq/etc/cacerts.pem
-listener.https.cafile = /run/secrets/ca
+#listener.https.cafile = /run/secrets/ca
 
 ## Set the path to the PEM encoded server certificate
 ## on the protocol level or on the listener level:
@@ -271,7 +271,7 @@ listener.https.cafile = /run/secrets/ca
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.certfile = /vernemq/etc/cert.pem
-listener.ssl.certfile = /run/secrets/cert_bundle
+#listener.ssl.certfile = /run/secrets/cert_bundle
 
 ## 
 ## Default: 
@@ -279,7 +279,7 @@ listener.ssl.certfile = /run/secrets/cert_bundle
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.certfile = /vernemq/etc/cert.pem
-listener.https.certfile = /run/secrets/cert_bundle
+#listener.https.certfile = /run/secrets/cert_bundle
 
 ## Set the path to the PEM encoded key file on the protocol
 ## level or on the listener level:
@@ -294,7 +294,7 @@ listener.https.certfile = /run/secrets/cert_bundle
 ## Acceptable values:
 ##   - the path to a file
 ## listener.ssl.keyfile = /vernemq/etc/key.pem
-listener.ssl.keyfile = /run/secrets/key
+#listener.ssl.keyfile = /run/secrets/key
 
 ## 
 ## Default: 
@@ -309,7 +309,7 @@ listener.ssl.keyfile = /run/secrets/key
 ## Acceptable values:
 ##   - the path to a file
 ## listener.https.keyfile = /vernemq/etc/key.pem
-listener.https.keyfile = /run/secrets/key
+#listener.https.keyfile = /run/secrets/key
 
 ## Set the list of allowed ciphers (each separated with a colon),
 ## on the protocol level or on the listener level. Reasonable defaults
