Turn allow_multiple_sessions off. It really shouldn't be used in an QOS 1 or 2 env.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -46,7 +46,7 @@ allow_unsubscribe_during_netsplit = off
 ## 
 ## Acceptable values:
 ##   - on or off
-allow_multiple_sessions = on
+allow_multiple_sessions = off
 
 ## Set the time in seconds VerneMQ waits before a retry, in case a (QoS=1 or QoS=2) message
 ## delivery gets no answer.
