Add inital websocket support... It doesn't work yet though.

--- a/vernemq.conf
+++ b/vernemq.conf
@@ -190,6 +190,7 @@ listener.nr_of_acceptors = 10
 ##   - an IP/port pair, e.g. 127.0.0.1:10011
 listener.tcp.default = 0.0.0.0:1883
 listener.ssl.default = 0.0.0.0:8883
+listener.ws.default = 0.0.0.0:8080
 
 ## listener.vmq.clustering is the IP address and TCP port that
 ## the broker will bind to accept connections from other cluster
